--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div  class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between nav-bar bg-success">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">James</h1>
+        <h1 class="sitename display-1">James</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -54,7 +54,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/bugatti.jpg" alt=" background image" class="hero-bg">
+      <img src="assets/img/jemo1.jpg" alt=" background image" class="hero-bg img-fluid">
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <h2  style="color: hsl(118, 100%, 76%);">Hi, I'm James Wainaina!</h2>
